[gd_scene load_steps=11 format=2]

[ext_resource path="res://Nodes/Control/PopButton/pop_button.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Control/ButtonExpansionMenu/button_expansion_menu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Interface/Themes/HiResTheme/Icons/png/x_icon.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Open"
length = 0.6
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("ButtonsContainer/OpenButton:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.15, 0, 0.15, 0, -30, -0.15, 0, 0.15, 0, 0, -0.15, 0, 0.15, 0 ),
"times": PoolRealArray( 0.1, 0.3, 0.55 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ButtonsContainer/OpenButton:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0, 0, -0.15, 0, 0.15, 0 ),
"times": PoolRealArray( 0.1, 0.3, 0.55 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MenuContainer:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0, 0, 1, -0.5, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MenuContainer:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ButtonsContainer/CloseButton:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -100, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.55 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ButtonsContainer/CloseButton:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.55 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("MenuContainer:rect_scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0, 0, 1, -0.15, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.35 )
}
tracks/7/type = "value"
tracks/7/path = NodePath("ButtonsContainer/CloseButton:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ButtonsContainer/OpenButton:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.45, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true ]
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("ButtonsContainer/CloseButton:mouse_filter")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 0.45 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ButtonsContainer/OpenButton:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ButtonsContainer/OpenButton:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MenuContainer:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MenuContainer:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ButtonsContainer/CloseButton:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ButtonsContainer/CloseButton:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("MenuContainer:rect_scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "value"
tracks/7/path = NodePath("ButtonsContainer/CloseButton:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ButtonsContainer/OpenButton:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("ButtonsContainer/CloseButton:mouse_filter")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.533333, 0.580392, 0.611765, 0.490196 )
border_width_top = 10
border_color = Color( 0.462745, 0.517647, 0.552941, 0.588235 )
border_blend = true
corner_radius_top_left = 26
corner_radius_top_right = 36
corner_radius_bottom_right = 36
corner_radius_bottom_left = 26
corner_detail = 20
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_offset = Vector2( 0, 6 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.215686, 0.270588, 0.305882, 0.686275 )
border_width_left = 1
border_width_top = 3
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.584314, 0.631373, 0.666667, 0.784314 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_size = 10
shadow_offset = Vector2( 0, 6 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.584314, 0.631373, 0.666667, 0.490196 )
border_width_left = 1
border_width_top = 3
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.294118 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_size = 10
shadow_offset = Vector2( 0, 6 )

[sub_resource type="StyleBoxEmpty" id=7]

[node name="ButtonExpansionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="MenuContainer" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
rect_scale = Vector2( 1e-05, 1 )
mouse_filter = 2
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentContainer" type="MarginContainer" parent="MenuContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 945.0
margin_bottom = 1425.0
mouse_filter = 2
custom_constants/margin_left = 100

[node name="ButtonsContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenButton" type="Button" parent="ButtonsContainer"]
margin_right = 100.0
margin_bottom = 1440.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="ButtonsContainer"]
modulate = Color( 0.164706, 0.164706, 0.180392, 0 )
margin_right = 100.0
margin_bottom = 1440.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
mouse_filter = 2
size_flags_horizontal = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
disabled = true
expand_icon = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ButtonsContainer/CloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = -17.5
margin_right = 17.5
margin_bottom = 17.5
rect_min_size = Vector2( 35, 35 )
rect_pivot_offset = Vector2( 22.5, 22.5 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
